<GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridLayout" android:columnCount="2" android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/amount_textview"
            android:id="@+id/amountTextView" android:gravity="right" android:layout_gravity="right"
            android:layout_marginRight="@dimen/default_margin" android:labelFor="@+id/amountEditText"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/amountEditText" android:digits="0123456789" android:maxLength="6" android:inputType="number">
        <requestFocus/>
    </EditText>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/amountDisplayTextView" android:layout_row="0" android:layout_column="1"
            android:layout_gravity="fill_horizontal" android:background="@android:color/holo_blue_light"
            android:padding="@dimen/default_padding"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/percentage_textview"
            android:id="@+id/percentageTextView" android:gravity="right" android:layout_gravity="center_vertical|right"
            android:layout_marginRight="@dimen/default_margin"/>
    <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/percentageSeekBar" android:layout_gravity="fill_horizontal" android:max="30"
            android:progress="18"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_column="1" android:layout_row="2"
            android:id="@+id/percentageLinearLayout" android:layout_gravity="fill_horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/percentage_15_textview"
                android:id="@+id/percentage15TextView" android:layout_weight="1" android:gravity="center"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/percentage_custome_textview"
                android:id="@+id/percentageCustomTextView" android:layout_weight="1" android:gravity="center"/>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tip_textview"
            android:id="@+id/tipTextView" android:layout_row="3" android:layout_column="0" android:gravity="right"
            android:layout_gravity="center_vertical|right" android:layout_marginRight="@dimen/default_margin"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_column="1" android:layout_row="3"
            android:id="@+id/tipLinearLayout" android:layout_gravity="fill_horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/tip15TextView" android:layout_weight="1"
                android:background="@android:color/holo_orange_light" android:padding="@dimen/default_padding"
                />
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/tipCustomTextView" android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:layout_marginLeft="@dimen/default_margin" android:padding="@dimen/default_padding"/>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/total_textview"
            android:id="@+id/totalTextView" android:layout_row="4" android:layout_column="0" android:gravity="right"
            android:layout_gravity="center_vertical|right" android:layout_marginRight="@dimen/default_margin"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_column="1" android:layout_row="4"
            android:layout_gravity="fill_horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/total15TextView" android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:layout_marginTop="@dimen/default_margin" android:padding="@dimen/default_padding"
                />
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/totalCustomTextView" android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:layout_marginLeft="@dimen/default_margin" android:layout_marginTop="@dimen/default_margin"
                android:padding="@dimen/default_padding"/>
    </LinearLayout>
    <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_row="5" android:layout_column="0"/>
</GridLayout>